--- a/latihan/latihan2/L2b243040046.html
+++ b/latihan/latihan2/L2b243040046.html
@@ -88,7 +88,7 @@
 
         <tr>
             <td colspan="3" align="RIGHT">
-                <input type="submit" value="submit" name="input">
+                <input type="submit" value="input" name="input">
             </td>
         </tr>
     </table>
