modul 1 dan 2 done

--- a/latihan/latihan2/T2243040046.html
+++ b/latihan/latihan2/T2243040046.html
@@ -45,7 +45,7 @@
         <tr>
         <td> Email </td>
         <td> :</td>
-        <td> <a href="https://gmail.com"> alfisasikbro@gmail.com</a> </td>
+        <td> <a href="mailto: alfisasikbro@gmail.com"> alfisasikbro@gmail.com</a> </td>
         </tr>
 
         <tr>
