--- a/latihan/latihan3/L3b243040046.html
+++ b/latihan/latihan3/L3b243040046.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="L3a243040046.css" />
+    <link rel="stylesheet" type="text/css" href="L3b243040046.css" />
     <title>Latihan 3a - CSS Dasar</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
       <a href="http://instagram.com/viisss.__">Muhammad Alvis Rafiffawaz</a>
     </h3>
 
-    <p>
+    <p id="satu">
       Facebook adalah sebuah layanan jejaring sosial yang diluncurkan pada bulan
       Februari 2004, dimiliki dan dioperasikan oleh Facebook, Inc. Pada
       September 2012, Facebook memiliki lebih dari satu miliar pengguna aktif,
@@ -26,7 +26,7 @@
       teman-teman mereka ke dalam daftar seperti "Rekan Kerja" atau "Teman
       Dekat".
     </p>
-    <p>
+    <p id="dua">
       Facebook didirikan oleh
       <a href="http://facebook.com">Mark Zuckerberg</a> bersama teman sekamarnya
       dan sesama mahasiswa Universitas Harvard, Eduardo Saverin, Andrew
