--- a/latihan/latihan3/L3d243040046.html
+++ b/latihan/latihan3/L3d243040046.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="L3a243040046.css" />
+    <link rel="stylesheet" type="text/css" href="L3d243040046.css" />
     <title>Latihan 3a - CSS Dasar</title>
   </head>
   <body>
@@ -9,10 +9,12 @@
     <h4>3 Oktober 2018, Pukul 15.00</h4>
     <h3>
       Oleh:
-      <a href="http://instagram.com/viisss.__">Muhammad Alvis Rafiffawaz</a>
+      <a href="http://instagram.com/viisss.__" id="tiga"
+        >Muhammad Alvis Rafiffawaz</a
+      >
     </h3>
 
-    <p>
+    <p id="satu">
       Facebook adalah sebuah layanan jejaring sosial yang diluncurkan pada bulan
       Februari 2004, dimiliki dan dioperasikan oleh Facebook, Inc. Pada
       September 2012, Facebook memiliki lebih dari satu miliar pengguna aktif,
@@ -26,12 +28,12 @@
       teman-teman mereka ke dalam daftar seperti "Rekan Kerja" atau "Teman
       Dekat".
     </p>
-    <p>
+    <p id="dua">
       Facebook didirikan oleh
-      <a href="http://facebook.com">Mark Zuckerberg</a> bersama teman sekamarnya
-      dan sesama mahasiswa Universitas Harvard, Eduardo Saverin, Andrew
-      McCollum, Dustin Moskovitz dan Chris Hughes. Keanggotaan situs web ini
-      awalnya terbatas untuk mahasiswa Harvard saja, kemudian diperluas ke
+      <a href="http://facebook.com" id="empat">Mark Zuckerberg</a> bersama teman
+      sekamarnya dan sesama mahasiswa Universitas Harvard, Eduardo Saverin,
+      Andrew McCollum, Dustin Moskovitz dan Chris Hughes. Keanggotaan situs web
+      ini awalnya terbatas untuk mahasiswa Harvard saja, kemudian diperluas ke
       perguruan lain di Boston, Ivy League, dan Universitas Stanford. Situs ini
       secara perlahan membuka diri kepada mahasiswa di universitas lain sebelum
       dibuka untuk siswa sekolah menengah atas, dan akhirnya untuk setiap orang
