--- a/latihan/latihan5/T5bag1.html
+++ b/latihan/latihan5/T5bag1.html
@@ -13,31 +13,51 @@
     <div class="container">
       <ul class="gallery">
         <li>
-          <a href="">
+          <a href="#gambar-1">
             <img src="capp.jpg" width="" alt="Captain America" />
-            <span>Captain America</span></a
-          >
+            <span>Captain America</span>
+          </a>
+
+          <div class="overlay" id="gambar-1">
+            <a href="#" class="close">X close</a>
+            <img src="capp.jpg" width="" alt="Captain America" />
+          </div>
         </li>
 
         <li>
-          <a href="">
+          <a href="#gambar-2">
             <img src="iron.jpg" width="150" alt="Ironman" />
             <span>Ironman</span></a
           >
+
+          <div class="overlay" id="gambar-2">
+            <a href="#" class="close">X close</a>
+            <img src="iron.jpg" width="" alt="Ironman" />
+          </div>
         </li>
 
         <li>
-          <a href="">
+          <a href="#gambar-3">
             <img src="spidey.png" width="150" alt="Spiderman" />
             <span>Spiderman</span></a
           >
+
+          <div class="overlay" id="gambar-3">
+            <a href="#" class="close">X close</a>
+            <img src="spidey.png" width="" alt="Spiderman" />
+          </div>
         </li>
 
         <li>
-          <a href="">
+          <a href="#gambar-4">
             <img src="thor.jpg" width="150" alt="Thor Odinson" />
             <span>Thor Odinson</span></a
           >
+
+          <div class="overlay" id="gambar-4">
+            <a href="#" class="close">X close</a>
+            <img src="thor.jpg" width="" alt="Thor Odinson" />
+          </div>
         </li>
 
         <div class="clear"></div>
