Berhasil Menambahkan Navigasi

--- a/latihan/latihan5/T5bag1.html
+++ b/latihan/latihan5/T5bag1.html
@@ -20,7 +20,10 @@
 
           <div class="overlay" id="gambar-1">
             <a href="#" class="close">X close</a>
+
+            <a href="#gambar-4" class="previous">previous</a>
             <img src="capp.jpg" width="" alt="Captain America" />
+            <a href="#gambar-2" class="next">next</a>
           </div>
         </li>
 
@@ -32,19 +35,25 @@
 
           <div class="overlay" id="gambar-2">
             <a href="#" class="close">X close</a>
+
+            <a href="#gambar-1" class="previous">previous</a>
             <img src="iron.jpg" width="" alt="Ironman" />
+            <a href="#gambar-3" class="next">next</a>
           </div>
         </li>
 
         <li>
           <a href="#gambar-3">
-            <img src="spidey.png" width="150" alt="Spiderman" />
+            <img src="spidey.jpg" width="110" alt="Spiderman" />
             <span>Spiderman</span></a
           >
 
           <div class="overlay" id="gambar-3">
             <a href="#" class="close">X close</a>
-            <img src="spidey.png" width="" alt="Spiderman" />
+
+            <a href="#gambar-2" class="previous">previous</a>
+            <img src="spidey.jpg" width="" alt="Spiderman" />
+            <a href="#gambar-4" class="next">next</a>
           </div>
         </li>
 
@@ -56,7 +65,10 @@
 
           <div class="overlay" id="gambar-4">
             <a href="#" class="close">X close</a>
+
+            <a href="#gambar-3" class="previous">previous</a>
             <img src="thor.jpg" width="" alt="Thor Odinson" />
+            <a href="#gambar-1" class="next">next</a>
           </div>
         </li>
 
