--- a/latihan/latihan2/L2b243040046.html
+++ b/latihan/latihan2/L2b243040046.html
@@ -1,96 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
-</head>
-<body>
+  </head>
+  <body>
     <table border="2" width="100%">
-        <tr>
-        <td colspan="3" bgcolor="LightGray"> Input Data Mahasiswa</td>
-        </tr>
+      <tr>
+        <td colspan="3" bgcolor="LightGray">Input Data Mahasiswa</td>
+      </tr>
 
-        <tr>
-            <td> Username</td>
-            <td> :</td>
-            <td> <input type="text"> </td>
-        </tr>
+      <tr>
+        <td>Username</td>
+        <td>:</td>
+        <td><input type="text" /></td>
+      </tr>
 
-        <tr>
-            <td> Password</td>
-            <td> :</td>
-            <td> <input type="text"> </td>
-        </tr>
+      <tr>
+        <td>Password</td>
+        <td>:</td>
+        <td><input type="text" /></td>
+      </tr>
 
-        <tr>
-            <td> Fullname</td>
-            <td> :</td>
-            <td> <input type="text"> </td>
-        </tr>
+      <tr>
+        <td>Fullname</td>
+        <td>:</td>
+        <td><input type="text" /></td>
+      </tr>
 
-        <tr>
-            <td> Email</td>
-            <td> :</td>
-            <td> <input type="text"> </td>
-        </tr>
+      <tr>
+        <td>Email</td>
+        <td>:</td>
+        <td><input type="text" /></td>
+      </tr>
 
-        <tr>
-            <td> Agama</td>
-            <td> :</td>
-            <td> <select>
-                <option name="Pilih Agama" selected> --Pilih Agama--</option>
-                <option value="Islam"> Islam</option>
-                <option value="Kristen"> Kristen</option>
-                <option value="Katolik"> Katolik</option>
-                <option value="Hindu"> Hindu</option>
-                <option value="Buddha"> Buddha</option>
-                <option value="konghucu"> konghucu</option>
-            </select> </td>
-        </tr>
+      <tr>
+        <td>Agama</td>
+        <td>:</td>
+        <td>
+          <select>
+            <option name="Pilih Agama" selected>--Pilih Agama--</option>
+            <option value="Islam">Islam</option>
+            <option value="Kristen">Kristen</option>
+            <option value="Katolik">Katolik</option>
+            <option value="Hindu">Hindu</option>
+            <option value="Buddha">Buddha</option>
+            <option value="konghucu">konghucu</option>
+          </select>
+        </td>
+      </tr>
 
-        <tr>
-            <td> Jenis Kelamin</td>
-            <td> :</td>
-            <td> 
-                <form>
-                    <input type="radio" name="Jenis kelamin" value="Pria"> Pria
-                    <input type="radio" name="Jenis kelamin" value="Wanita"> Wanita
-                </form>
-            </td>
-        </tr>
+      <tr>
+        <td>Jenis Kelamin</td>
+        <td>:</td>
+        <td>
+          <form>
+            <input type="radio" name="Jenis kelamin" value="Pria" /> Pria
+            <input type="radio" name="Jenis kelamin" value="Wanita" /> Wanita
+          </form>
+        </td>
+      </tr>
 
-        <tr>
-            <td> Hobi</td>
-            <td> :</td>
-            <td>
-            <form>
-               <input type="radio" name="hobi" value="musik"> musik
-               <input type="radio" name="hobi" value="olahraga"> Olahraga
-               <input type="radio" name="hobi" value="Gaming"> Gaming
-               <input type="radio" name="hobi" value="Lainnya"> Lainnya
-            </form>
-            </td>
-        </tr>
+      <tr>
+        <td>Hobi</td>
+        <td>:</td>
+        <td>
+          <form>
+            <input type="radio" name="hobi" value="musik" /> musik
+            <input type="radio" name="hobi" value="olahraga" /> Olahraga
+            <input type="radio" name="hobi" value="Gaming" /> Gaming
+            <input type="radio" name="hobi" value="Lainnya" /> Lainnya
+          </form>
+        </td>
+      </tr>
 
-        <tr>
-            <td> Profile singkat</td>
-            <td> :</td>
-            <td> 
-                <form>
-                    <textarea rows="3" cols="40">
+      <tr>
+        <td>Profile singkat</td>
+        <td>:</td>
+        <td>
+          <form>
+            <textarea rows="3" cols="40"> </textarea>
+          </form>
+        </td>
+      </tr>
 
-                    </textarea>
-                </form>
-
-            </td>
-        </tr>
-
-        <tr>
-            <td colspan="3" align="RIGHT">
-                <input type="submit" value="input" name="input">
-            </td>
-        </tr>
+      <tr>
+        <td colspan="3" align="RIGHT">
+          <input type="submit" value="input" name="input" />
+        </td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
